--- a/static/style.css
+++ b/static/style.css
@@ -52,7 +52,7 @@ i {
 }
 
 img {
-    width: 10%;
+    width: 40px;
 }
 
 .aside {
@@ -65,8 +65,13 @@ img {
     padding: 30px;
 }
 
+.new-discussion {
+    margin-left: 12px;
+}
+
 .new-discussion .new {
     float: right;
+    margin-right: 20px;
 }
 
 .gpt {
@@ -91,14 +96,15 @@ img {
 
 .gpt h4 i {
     font-size: 25px;
-    margin-right: 2%;
-    margin-left: 1%;
+    margin-right: 4%;
+    margin-left: 2%;
     vertical-align: middle;
 }
 
 .upgrade {
-    position: relative;
-    top: 60%;
+    position: fixed;
+    top: 89%;
+    bottom: 0%;
     width: 100%;
 }
 
@@ -113,7 +119,8 @@ img {
 }
 
 .main-content {
-    margin-left: 25%;
+    margin-left: 400px;
+    margin-top: 20px;
 }
 
 .main-content small {
@@ -121,37 +128,45 @@ img {
     color: gray;
 }
 
+.main-content .header {
+    margin-left: 50px;
+    margin-right: 80px;
+
+}
+
+.header h2 {
+    margin-left: 100px;
+}
+
 .header i {
     float: right;
     color: white;
     font-size: 25px;
-    margin-right: 30px;
+    margin-right: 50px;
     padding-top: 10px;
 }
 
 .chatbox {
     display: block;
-    height: 500px;
+    height: 600px;
     overflow: auto;
     padding: 10px;
 }
 
 .user-message {
-    display: block;
     background-color: rgb(41, 41, 41);
     border-radius: 5px;
     margin-right: 5%;
-    margin-left: 70%;
-    max-width: 50%;
-    margin-top: 4%;
+    margin-left: 50%;
+    margin-top: 15px;
 }
 
 .bot-message {
-    background-color: rgb(41, 41, 41);
     border-radius: 5px;
-    max-width: 50%;
-    margin-left: 3%;
-    margin-top: 4%
+    max-width: inherit;
+    margin-left: 100px;
+    margin-right: 5%;
+    margin-top: 10px;
 }
 
 .message {
@@ -160,9 +175,9 @@ img {
 }
 
 .message p {
-    padding: 5px;
+    padding: 20px;
     font-family: 'Noto Sans', 'Arial';
-    font-size: 15px;
+    font-size: 18px;
 }
 
 .question {
@@ -201,6 +216,7 @@ img {
     width: 100%;
     height: 100%;
 }
+
 .pop-up {
     position: absolute;
     top: 50%;
@@ -218,4 +234,96 @@ img {
     background-color: rgb(41, 41, 41);
     border-radius: 20%;
     z-index: 1;
+}
+
+/* responsive */
+@media (max-width: 600px) {
+    .aside {
+        width: 150px;
+    }
+
+    .new-discussion .new {
+        float: right;
+        margin-right: 5px;
+    }
+
+    .upgrade {
+        width: 140px;
+    }
+
+    .main-content {
+        margin-left: 100px;
+        margin-top: 20px;
+    }
+
+    .header {
+        width: 100%;
+    }
+
+    .header i {
+        float: right;
+        color: white;
+        font-size: 25px;
+        margin-right: 5px;
+        padding-top: 10px;
+    }
+
+}
+
+@media (max-width: 400px) {
+    .aside {
+        display: none;
+    }
+
+    .main-content {
+        margin-left: 0px;
+        margin-top: 20px;
+        width: 300px;
+    }
+
+    .header h2 {
+        margin-left: 0px;
+    }
+
+    .header .share {
+        margin-right: 20px;
+    }
+    .chatbox {
+        width: 380px;
+    }
+
+    .user-message {
+        margin-right: 5%;
+        margin-left: 0px;
+        margin-top: 5px;
+    }
+
+    .bot-message {
+        margin-top: 5px;
+        margin-left: 0px;
+    }
+
+    .question {
+        display: flex;
+        justify-content: start;
+        position: fixed;
+        top: 90%;
+        left: 20%;
+        width: 100%;
+        height: 40px;
+    }
+    .question button {
+        border-radius: 50%;
+        width: 10%;
+        padding: 1%;
+        margin-left: 1%;
+        background-color: rgb(41, 41, 41);
+        border: none;
+    }
+
+    textarea::placeholder {
+        font-size: 15px;
+        font-family: 'Noto Sans', 'Arial';
+        padding: 5px;
+    }
 }
