--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,11 @@
             </div>
             <div class="gpt">
                 <h4>
-                    <img src="{{ url_for('static', filename='images/chatGPT.png') }}" alt="Logo chatGPT">
+                    <img src="{{ url_for('static', filename='Images/chatGPT.png') }}" alt="Logo chatGPT">
                     BryanGPT
                 </h4>
                 <h4>
-                    <img src="{{ url_for('static', filename='images/hugging.png') }}" alt="logo hugging Face">
+                    <img src="{{ url_for('static', filename='Images/hugging.png') }}" alt="logo hugging Face">
                     <a href="https://huggingface.co/">Hugging Face</a>
                 </h4>
                 <h4>
